# manim-slides

./: .bumpversion.cfg  .flake8  .gitignore  .mdlc.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CNAME  LICENSE.md  PLAN.md  README.md  custom_config.yml  errors.txt  example.py  example_static_image.py  fix_qt_errors.py  fix_qt_simple.py  fix_unresolved_attributes.py  manim-slides.qrc  pyproject.toml  qt_errors.txt  remaining_errors1.txt  remove_unused_ignores.py  rendering_times.csv  setup.py  slides.html  test.html  unused_ignores.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature_request.yml  issue_template.md  support.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/issue_templates/: feature_request.yml
.github/scripts/: check_github_issues.py
.github/workflows/: clearcache.yml  codeql-analysis.yml  coverage.yml  deploy-pipy.yaml  draft-pdf.yml  languagetool.yml  latest_tag.yml  pages.yml  pre-commit.yml  publish.yml  python-publish.yml  test_examples.yml  tests.yml
docker/: Dockerfile  README.md
docs/source/: changelog.md  conf.py  faq.md  features_table.md  gallery.md  index.md  index.rst  installation.md  license.md  manim_or_manimgl.md  quickstart.md
docs/source/_static/: template.diff  template.html
docs/source/contributing/: index.md  internals.md  workflow.md
docs/source/reference/: api.md  cli.md  customize_html.md  examples.md  gui.md  html.md  index.md  ipython_magic.md  large_presentation_tips.md  magic_example.ipynb  sharing.md  sphinx_extension.md  sync.md
manim_presentation/: __init__.py  present.py  slide.py  wizard.py
manim_slides/: __init__.py  __main__.py  __version__.py  checkhealth.py  commons.py  config.py  convert.py  defaults.py  logger.py  main.py  manim.py  present.py  qt_utils.py  render.py  resources.py  revealjs_template.html  slide.py  utils.py  wizard.py
manim_slides/cli/: commands.py  commons.py  resources.py
manim_slides/cli/convert/: commands.py
manim_slides/cli/convert/templates/: __init__.py  revealjs.html
manim_slides/cli/present/: __init__.py  commands.py  player.py
manim_slides/cli/render/: commands.py
manim_slides/cli/wizard/: __init__.py  commands.py  wizard.py
manim_slides/core/: config.py  defaults.py  logger.py  utils.py
manim_slides/data/: revealjs_template.html
manim_slides/docs/: manim_slides_directive.py
manim_slides/ipython/: ipython_magic.py
manim_slides/present/: __init__.py  player.py
manim_slides/slide/: __init__.py  animation.py  base.py  manim.py  manimgl.py  manimlib.py  manimvoiceover.py
manim_slides/sphinxext/: manim_slides_directive.py
manim_slides/templates/: README.md  firebase_sync.html  revealjs.html
manim_slides/wizard/: __init__.py  wizard.py
paper/: paper.bib  paper.md
scripts/: sync_firebase_template.py
static/: logo.py  make_favicon.sh  make_logo.sh
tests/: conftest.py  test_base_slide.py  test_checkhealth.py  test_commons.py  test_config.py  test_config_defaults.py  test_convert.py  test_defaults.py  test_main.py  test_manim.py  test_player.py  test_present.py  test_qt_utils.py  test_slide.py  test_subsections.py  test_utils.py  test_wizard.py
tests/data/: example.py  slides.py  video_data_uri.txt
tests/data/slides/: BasicExample.json  BasicSlide.json
tests/slides/: BasicExample.json
